src/test/deca/context/valid/created/objet/def_meth2.deca
// Description :
// test de verification definition de methode avec this
//
// Resultats :
// ok
class A {
    int x ;
    void init() {
        this.x = 0 ;
    }

    void m() {
        this.x = 0 ;
    }
}